--- a/Crowd_Funding_Platform/Views/Users/ContributorsList.cshtml
+++ b/Crowd_Funding_Platform/Views/Users/ContributorsList.cshtml
@@ -66,6 +66,9 @@
     }
 </style>
 
+<a asp-action="ExportContributorsToExcel" class="btn btn-success">
+    <i class="fa fa-download"></i> Export to Excel
+</a>
 
 <div class="container mt-4">   
     @if (Model != null && Model.Any())
